--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "dotenv": "^16.0.3",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "paytmchecksum": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
